<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notify Me NYC</string>
    <string name="mta_feed">http://www.mta.info/status/serviceStatus.txt</string>
    <string name="mta_service_status_url">ttp://mobile.usablenet.com/mt/advisory.mtanyct.info/service/mobile/subway.php</string>
    <string name="add_button">ADD NOTIFICATION</string>
    <string name="info_header">Info!</string>
    <string name="info_body">"Enter the train lines, the days you ride and the time you usually ride. Notify Me NYC will check for delays at those times and ONLY send you a notification if there's a hold-up. Easily edit or delete your notifications or add as many as you like! \n\nDeveloped by The Cortelyou Collective
\nDesigned by Haley Fiege"</string>
    <string name="delays_button">VIEW CURRENT SERVICE STATUS</string>
    <string name="add_notification_title">ADD NOTIFICATION</string>
    <string name="edit_notification_title">EDIT NOTIFICATION</string>
    <string name="choose_line">CHOOSE YOUR LINE(S)</string>
    <string name="edit_line">EDIT YOUR LINE(S)</string>
    <string name="choose_line2">CHOOSE YOUR LINE(S)</string>
    <string name="choose_days">CHOOSE THE DAYS YOU RIDE</string>
    <string name="edit_days">EDIT THE DAY (ONLY ONE DAY)</string>
    <string name="choose_days2">CHOOSE YOUR DAY(S)</string>
    <string name="choose_time_title">CHOOSE THE TIME YOU RIDE</string>
    <string name="edit_time">EDIT THE TIME YOU RIDE</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="delete_button">DELETE</string>
    <string name="edit_button">EDIT</string>
    <string name="ok_button">OK</string>
    <string name="home_button">HOME</string>
    <string name="back_button">BACK</string>
    <string name="return_home_button">RETURN HOME</string>
    <string name="train_prompt">Choose a train line</string>
    <string name="notification_saved_message">Your Notification has been saved.</string>
    <string name="notification_edit_message">Your Notification has been edited.</string>
    <string name="notification_cancel_add">No Notifications were saved.  </string>
    <string name="notification_cancel_edit">No Notifications were edited.</string>
    <string name="no_lines_selected_message">Please select at least one train line</string>
    <string name="no_days_selected_message">Please select at least one day</string>
    <string name="delete_notification_title">You are about to delete a notification.</string>
    <string name="delete_notification_message">Are you sure you want to delete?</string>
    <string name="delete_all_title">You are about to delete all your set notifications.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Menu -->
    <string name="settings">SETTINGS MENU</string>
    <string name="vibrate">Vibrate phone on Notification?</string>
    <string name="tone">Sound tone on Notification?</string>
    <string name="menu_delete_all">DELETE ALL NOTIFICATIONS</string>
    
    <!-- Chooser Menu -->
<<<<<<< HEAD
    <string name="chooser_title">What train service do you ride:</string>
    <string name="subway">NYC Subway</string>
    <string name="LIRR">Long Island Railroad</string>
    <string name="MN">Metro North</string>
=======
    <string name="chooser_title">CHOOSE WHAT KIND OF TRAIN YOU RIDE:</string>
    <string name="subway">NYC SUBWAY</string>
    <string name="LIRR">LONG ISLAND RAILROAD</string>
    <string name="MN">METRO NORTH</string>
>>>>>>> de21d29c3fa459469fe95c0938007df621d01945
    
    <!-- Days of the week not sure if this is still used? -->
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    
    <!-- MTA Service Status -->
    <string name="mta_status_good">GOOD SERVICE</string>
	<string name="mta_status_planned">PLANNED WORK</string>
	<string name="mta_status_delay">DELAYS</string>
	<string name="mta_status_service">SERVICE CHANGE</string>
    
    <!-- Subway line labels -->
    <string-array name="trains_array">
        <item>123</item>
        <item>456</item>
        <item>7</item>
        <item>ACE</item>
        <item>BDFM</item>
        <item>G</item>
        <item>JZ</item>
        <item>L</item>
        <item>NQR</item>
        <item>S</item>
        <item>SIR</item>
    </string-array> 
    
    <!-- Long Island Railroad -->
    <string-array name="LIRR_array">
    	<item>City Terminal Zone</item>
    	<item>Babylon</item>
    	<item>Far Rockaway</item>
    	<item>Hempstead</item>
    	<item>Long Beach</item>
    	<item>Montauk</item>
    	<item>Oyster Bay</item>
    	<item>Port Jefferson</item>
    	<item>Port Washington</item>
    	<item>Ronkonkoma</item>
    	<item>West Hempstead</item>
    </string-array>
    
    <!-- Metro North -->
    <string-array name="MN_array">
    	<item>Hudson</item>
    	<item>Harlem</item>
    	<item>Wassaic</item>
    	<item>New Haven</item>
    	<item>New Canaan</item>
    	<item>Danbury</item>
    	<item>Waterbury</item>
    	<item>Pascack Valley</item>
    	<item>Port Jervis</item>
    </string-array>
    
    <!-- Days of the Weeks --> 
    <string-array name="days_array">
    	<item>MONDAY</item>
    	<item>TUESDAY</item>
    	<item>WEDNESDAY</item>
    	<item>THURSDAY</item>
    	<item>FRIDAY</item>
    	<item>SATURDAY</item>
    	<item>SUNDAY</item>
    </string-array>
</resources>
