<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="vertical"
	android:background="#ececec">
	<LinearLayout
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	<LinearLayout
	android:id="@+id/topbit"
    android:layout_width="fill_parent"
    android:layout_height="47dip"
    android:background="#3e3e3e">
    <TextView
    android:id="@+id/other_days_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/choose_days2"
    android:textColor="#ececec"
    android:textSize="21dip"
    android:paddingLeft="14dip"
    android:paddingTop="12dip"
    android:paddingBottom="8dip"
    />
    </LinearLayout>
    <ScrollView
    android:layout_width="wrap_content"
    android:layout_height="fill_parent">
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
			<CheckBox
			android:id="@+id/mondayCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/monday"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:layout_marginLeft="14dip"
			android:tag="2"/>
			<View
			  android:layout_width="fill_parent"
			  android:layout_height="1dip"
			  android:background="#e3e3e3"/>
			<CheckBox
			android:id="@+id/tuesdayCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/tuesday"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:layout_marginLeft="14dip"
			android:tag="3"/>
			<View
			  android:layout_width="fill_parent"
			  android:layout_height="1dip"
			  android:background="#e3e3e3"/>
			<CheckBox
			android:id="@+id/wednesdayCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/wednesday"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:layout_marginLeft="14dip"
			android:tag="4"/>
			<View
			  android:layout_width="fill_parent"
			  android:layout_height="1dip"
			  android:background="#e3e3e3"/>
			<CheckBox
			android:id="@+id/thursdayCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/thursday"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:layout_marginLeft="14dip"
			android:tag="5"/>
			<View
			  android:layout_width="fill_parent"
			  android:layout_height="1dip"
			  android:background="#e3e3e3"/>
			<CheckBox
			android:id="@+id/fridayCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/friday"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:layout_marginLeft="14dip"
			android:tag="6"/>
			<View
			  android:layout_width="fill_parent"
			  android:layout_height="1dip"
			  android:background="#e3e3e3"/>
			<CheckBox
			android:id="@+id/saturdayCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/saturday"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:layout_marginLeft="14dip"
			android:tag="7"/>
			<View
			  android:layout_width="fill_parent"
			  android:layout_height="1dip"
			  android:background="#e3e3e3"/>
			<CheckBox
			android:id="@+id/sundayCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/sunday"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:layout_marginLeft="14dip"
			android:tag="1"
			/>
			</LinearLayout>
			</ScrollView>
		</LinearLayout>
	<LinearLayout
	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_alignParentBottom="true"
  	android:orientation="vertical">
	<LinearLayout
	  	android:orientation="horizontal"
		android:layout_width="fill_parent"
	  	android:layout_height="71dip"
	  	android:background="#2d2d2d">
	  	<Button
	  	android:id="@+id/cancel_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/cancel_button"
	  	android:textSize="23dip"
	  	android:textColor="#ececec"
	  	android:background="@android:color/transparent"
	  	android:layout_gravity="center_vertical"
	  	/>
	  	<Button
	  	android:id="@+id/save_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/save_button"
	  	android:textSize="23dip"
	  	android:textColor="#6ec610"
	  	android:background="@android:color/transparent"
	  	android:layout_gravity="center_vertical"
	  	/>
	</LinearLayout>
</LinearLayout>
</RelativeLayout>