<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:gravity="center"
  android:layout_margin="10dip"
  android:background="#969796">
  <LinearLayout
  	android:orientation="horizontal"
	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_margin="5dip"
  	android:layout_gravity="center_horizontal">
	  	<Button
	  	android:id="@+id/edit_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/edit_button"
	  	/>
	  	<Button
	  	android:id="@+id/delete_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/delete_button"
	  	/>
	</LinearLayout>
	<ListView
	android:id="@+id/notification_list"
	android:layout_width="fill_parent"
	android:layout_height="250dip">
	</ListView>
	<Button
	android:id="@+id/cancel_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/cancel_button"
	/>
</LinearLayout>
