<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="280dip"
	android:orientation="vertical"
	android:background="#ececec">
	<LinearLayout
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
	<LinearLayout
	android:id="@+id/topbit"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backrepeat">
    <TextView
    android:id="@+id/settings_header"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/chooser_title"
    android:textColor="#ffffff"
    android:textSize="21dip"
    android:paddingLeft="14dip"
    android:paddingTop="12dip"
    android:paddingBottom="10dip"
    android:paddingRight="14dip"
    />
    </LinearLayout>
    <Button
    android:id="@+id/subway_btn"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:text="@string/subway"
    android:textSize="21dip"
    android:background="@drawable/grey_btn"
    />
    <View
  android:id="@+id/thin_line"
  android:layout_width="fill_parent"
  android:layout_height="2dip"
  android:background="#e3e3e3"/>
    <Button
    android:id="@+id/LIRR_btn"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:text="@string/LIRR"
    android:textSize="21dip"
    android:background="@drawable/grey_btn"
    />
    <View
  android:id="@+id/thin_line"
  android:layout_width="fill_parent"
  android:layout_height="2dip"
  android:background="#e3e3e3"/>
    <Button
    android:id="@+id/MN_btn"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:text="@string/MN"
    android:textSize="21dip"
    android:background="@drawable/grey_btn"
    />
    <View
  android:id="@+id/thin_line"
  android:layout_width="fill_parent"
  android:layout_height="2dip"
  android:background="#e3e3e3"/>
    </LinearLayout>
</LinearLayout>