<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="vertical"
	android:background="#ececec">
	<LinearLayout
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	<LinearLayout
	android:id="@+id/topbit"
    android:layout_width="fill_parent"
    android:layout_height="47dip"
    android:background="@drawable/backrepeat">
    <TextView
    android:id="@+id/settings_header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settings"
    android:textColor="#ffffff"
    android:textSize="21dip"
    android:paddingLeft="14dip"
    android:paddingTop="12dip"
    android:paddingBottom="8dip"
    />
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dip"
    android:layout_marginLeft="14dip">
			<CheckBox
			android:id="@+id/toneCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/tone"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:tag="2"/>
			<CheckBox
			android:id="@+id/vibrateCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="47dip"
			android:text="@string/vibrate"
			android:textColor="#3e3e3e"
			android:button="@drawable/check_box"
			android:tag="2"/>
			</LinearLayout>
		</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
	  	android:layout_height="71dip"
	  	android:background="#2d2d2d"
	  	android:layout_alignParentBottom="true">
	  	<Button
	  	android:id="@+id/save_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/save_button"
	  	android:textSize="23dip"
	  	android:textColor="@drawable/green_button_text"
	  	android:background="@android:color/transparent"
	  	android:layout_gravity="center_vertical"
	  	/>
	</LinearLayout>
</RelativeLayout>