<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:orientation="vertical"
	android:gravity="center"
	android:padding="10dip">
	<TextView 
		android:id="@+id/other_days_text"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" 
		android:textColor="#fff" 
		android:textStyle="bold"
		android:text="@string/choose_line2"
	/>
	<ScrollView
		android:layout_height="240dip"
		android:layout_width="240dip">
		<LinearLayout
		android:id="@+id/scrollcontents"
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">
		</LinearLayout>
	</ScrollView>
	<LinearLayout
  	android:orientation="horizontal"
	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_margin="5dip"
  	android:layout_gravity="center_horizontal">
	  	<Button
	  	android:id="@+id/ok_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/ok_button"
	  	/>
	  	<Button
	  	android:id="@+id/cancel_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/cancel_button"
	  	/>
	</LinearLayout>
</LinearLayout>
