<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#ececec">
  <LinearLayout
  	android:id="@+id/top_header"
    android:layout_width="fill_parent"
    android:layout_height="47dip"
    android:background="#3e3e3e">
    <TextView
    android:id="@+id/edit_title1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#ececec"
    android:textSize="21dip"
    android:paddingLeft="14dip"
    android:paddingTop="12dip"
    android:paddingBottom="6dip" android:text="@string/add_notification_title"/>
    </LinearLayout>
    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@id/top_header">
		<LinearLayout
		android:orientation="vertical"
		android:id="@+id/editScreenMain"
		android:layout_width="fill_parent"
	  	android:layout_height="fill_parent">
	    <LinearLayout
	    android:id="@+id/trains"
	    android:layout_width="fill_parent"
	    android:layout_height="48dip"
	    android:orientation="horizontal"
	    android:background="@drawable/greenchecker_btn">
	    <ImageView
	    android:id="@+id/trains_check"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/add"
	    android:paddingLeft="14dip"
	    android:paddingTop="12dip"
	    android:paddingBottom="10dip"
	    android:paddingRight="8dip"
	    />
	    <TextView
	    android:id="@+id/trains_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/choose_line"
	    android:textColor="#ffffff"
	    android:textSize="21dip"
	    android:paddingTop="13dip"
	    />
	    </LinearLayout>
	    <View
	    android:id="@+id/thinline"
	  	android:layout_width="fill_parent"
	  	android:layout_height="1dip"
	  	android:background="#3e3e3e"/>
	    <LinearLayout
	    android:id="@+id/days"
	    android:layout_width="fill_parent"
	    android:layout_height="48dip"
	    android:orientation="horizontal"
	    android:background="@drawable/greenchecker_btn">
	    <ImageView
	    android:id="@+id/days_check"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/add"
	    android:paddingLeft="14dip"
	    android:paddingTop="12dip"
	    android:paddingBottom="10dip"
	    android:paddingRight="8dip"
	    />
	    <TextView
	    android:id="@+id/days_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/choose_days"
	    android:textColor="#ffffff"
	    android:textSize="21dip"
	    android:paddingTop="13dip"
	    />
	    </LinearLayout>
	  	<TextView
	  	android:id="@+id/edit_title2"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:textSize="21dip"
	  	android:textColor="#3e3e3e"
	  	android:paddingLeft="14dip"
	  	android:paddingTop="22dip"
	  	android:text="@string/choose_time_title"/>
	  	<org.cortelyoucollective.notifyme.TimeChooser
	  	android:id="@+id/time_picker"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:layout_gravity="center_horizontal"
	  	/>
	</LinearLayout>
</ScrollView>
<LinearLayout
	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_alignParentBottom="true"
  	android:orientation="vertical">
	<LinearLayout
	  	android:orientation="horizontal"
		android:layout_width="fill_parent"
	  	android:layout_height="60dip"
	  	android:background="#2d2d2d">
	  	<Button
	  	android:id="@+id/cancel_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/cancel_button"
	  	android:textSize="23dip"
	  	android:textColor="@drawable/light_button_text"
	  	android:background="@android:color/transparent"
	  	android:layout_gravity="center_vertical"
	  	/>
	  	<Button
	  	android:id="@+id/save_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/save_button"
	  	android:textSize="23dip"
	  	android:textColor="@drawable/green_button_text"
	  	android:background="@android:color/transparent"
	  	android:layout_gravity="center_vertical"
	  	/>
	</LinearLayout>
	<com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="a14f2b1f1b889bf"
        ads:adSize="BANNER"
        ads:loadAdOnCreate="true">
        </com.google.ads.AdView>
</LinearLayout>
</RelativeLayout>
