<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="vertical"
	android:background="#ececec">
	<LinearLayout
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	<LinearLayout
	android:id="@+id/topbit"
    android:layout_width="fill_parent"
    android:layout_height="47dip"
    android:background="#3e3e3e">
    <TextView
    android:id="@+id/other_days_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/choose_days2"
    android:textColor="#ececec"
    android:textSize="21dip"
    android:paddingLeft="14dip"
    android:paddingTop="12dip"
    android:paddingBottom="8dip"
    />
    </LinearLayout>
    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:layout_marginLeft="14dip">
    <LinearLayout
    android:id="@+id/checkbox_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
			</LinearLayout>
			</ScrollView>
			<LinearLayout
	  	android:orientation="horizontal"
		android:layout_width="fill_parent"
	  	android:layout_height="71dip"
	  	android:background="#2d2d2d">
	  	<Button
	  	android:id="@+id/cancel_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/cancel_button"
	  	android:textSize="23dip"
	  	android:textColor="@drawable/light_button_text"
	  	android:background="@android:color/transparent"
	  	android:layout_gravity="center_vertical"
	  	/>
	  	<Button
	  	android:id="@+id/save_button"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/save_button"
	  	android:textSize="23dip"
	  	android:textColor="@drawable/green_button_text"
	  	android:background="@android:color/transparent"
	  	android:layout_gravity="center_vertical"
	  	/>
	</LinearLayout>
		</LinearLayout>
</RelativeLayout>