<?xml version="1.0" encoding="utf-8"?>
<!-- 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ListView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/statusListView" android:background="#ffffffff" android:cacheColorHint="#ffffffff" />
</RelativeLayout>
 -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:panel="http://schemas.android.com/apk/res/com.bitty.notifyme"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ececec"
    >
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ececec">
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="55dip"
    android:background="#3e3e3e">
    <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="#ececec"
    android:textSize="32dip"
    android:paddingLeft="14dip"
    android:paddingTop="8dip"
    android:paddingBottom="8dip"
    />
    </LinearLayout>
    	<ListView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/statusListView" android:background="#ffffffff" android:cacheColorHint="#ffffffff"
		android:divider="#e3e3e3"
  		android:dividerHeight="1dip"/>
    	<View
	  android:id="@+id/thin_line"
	  android:layout_width="fill_parent"
	  android:layout_height="1dip"
	  android:background="#e3e3e3"/>
	</LinearLayout>
		<Button
	android:id="@+id/home_btn"
    android:layout_width="fill_parent"
    android:layout_height="75dip"
    android:background="#3e3e3e"
    android:layout_gravity="bottom"
    android:textColor="@drawable/green_button_text"
    android:textSize="23dip" android:text="@string/home_button"/>
	<com.bitty.notifyme.Panel
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/topPanel"
			android:paddingBottom="20dip"
			panel:position="top"
			panel:animationDuration="1000"
			panel:linearFlying="true"
			panel:openedHandle="@drawable/infotab_open"
			panel:closedHandle="@drawable/infotab">
		<Button
			android:id="@id/panelHandle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:layout_marginRight="14dip"
			android:layout_marginTop="-4dip"
			 />
		<LinearLayout
			android:id="@+id/panelContent"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:background="#2d2d2d"
			>
			<TextView
			android:id="@+id/info_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_header"
			android:textColor="#6ec610"
			android:textSize="32dip"
			android:layout_marginLeft="14dip"
			android:layout_marginTop ="10dip"
			/>
			<TextView
			android:id="@+id/info_body"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_body"
			android:textColor="#ececec"
			android:textSize="15dip"
			android:layout_marginLeft="14dip"
			android:paddingTop="10dip"
			android:paddingRight="14dip"
			android:paddingBottom="5dip"
			/>
			<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/cc"
			android:layout_marginLeft="14dip"
			android:paddingBottom="8dip"
			/>
			<TextView
			android:id="@+id/info_body_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_body_2"
			android:textColor="#ececec"
			android:textSize="15dip"
			android:layout_marginLeft="14dip"
			android:paddingTop="5dip"
			android:paddingRight="14dip"
			android:paddingBottom="20dip"
			/>
			</LinearLayout>
	</com.bitty.notifyme.Panel>
</FrameLayout>

