<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:panel="http://schemas.android.com/apk/res/org.cortelyoucollective.notifyme"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ececec"
    >
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ececec">
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="55dip"
    android:background="#3e3e3e">
    <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="#ececec"
    android:textSize="32dip"
    android:paddingLeft="14dip"
    android:paddingTop="8dip"
    android:paddingBottom="8dip"
    />
    </LinearLayout>
    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="20dip"
    android:paddingLeft="14dip"
    android:id="@+id/delay_info_text"
    android:textColor="#3e3e3e"
    android:text="here's the text about the delay"
    />
    </ScrollView>
	</LinearLayout>
	<com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="a14f2b1f1b889bf"
        ads:adSize="BANNER"
        ads:loadAdOnCreate="true"
        android:layout_alignParentBottom="true">
        </com.google.ads.AdView>
    <Button
		android:id="@+id/home_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="60dip"
	    android:background="#3e3e3e"
	    android:textColor="@drawable/green_button_text"
	    android:textSize="23dip"
	    android:text="@string/back_button"
	    android:layout_above="@id/adView"/>
	<org.cortelyoucollective.notifyme.Panel
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/topPanel"
			android:paddingBottom="20dip"
			panel:position="top"
			panel:animationDuration="1000"
			panel:linearFlying="true"
			panel:openedHandle="@drawable/infotab_open"
			panel:closedHandle="@drawable/infotab">
		<Button
			android:id="@id/panelHandle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:layout_marginRight="14dip"
			android:layout_marginTop="-4dip"
			 />
		<LinearLayout
			android:id="@+id/panelContent"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:background="#2d2d2d"
			>
			<TextView
			android:id="@+id/info_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_header"
			android:textColor="#6ec610"
			android:textSize="32dip"
			android:layout_marginLeft="14dip"
			android:layout_marginTop ="10dip"
			/>
			<TextView
			android:id="@+id/info_body"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_body"
			android:textColor="#ececec"
			android:textSize="15dip"
			android:layout_marginLeft="14dip"
			android:paddingTop="10dip"
			android:paddingRight="14dip"
			android:paddingBottom="5dip"
			/>
			<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/cc"
			android:layout_marginLeft="14dip"
			android:paddingBottom="8dip"
			/>
			<TextView
			android:id="@+id/info_body_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_body_2"
			android:textColor="#ececec"
			android:textSize="15dip"
			android:layout_marginLeft="14dip"
			android:paddingTop="5dip"
			android:paddingRight="14dip"
			android:paddingBottom="20dip"
			/>
			</LinearLayout>
	</org.cortelyoucollective.notifyme.Panel>
</RelativeLayout>

